zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__clipboard_image_pasted_into_chat_input.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered_after_paste
---
  Home  .                                                                       
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ╭────────────────────────────────────────────────────────────────────────────╮
> │[Image #1]                                                                  │
  ╰────────────────────────────────────────────────────────── Automatic model ─╯
                                                                                
  ⏸ ask permissions on                                                          
  Enter send  ·  shift+tab permissions  ·  /home
