zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__clipboard_image_top_tip.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  Home  .                                                                       
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                          image in clipboard · ctrl+v to paste  
  ╭────────────────────────────────────────────────────────────────────────────╮
> │                                                                            │
  ╰────────────────────────────────────────────────────────── Automatic model ─╯
                                                                                
  ⏸ ask permissions on                                                          
  Enter send  ·  shift+tab permissions  ·  /home
