zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__completed_update_notice.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  Home  .                                                                       
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                               Zeta 1.2.3 is ready · restart to use the update  
  ╭────────────────────────────────────────────────────────────────────────────╮
> │                                                                            │
  ╰────────────────────────────────────────────────────────── Automatic model ─╯
                                                                                
  ⏸ ask permissions on                                                          
  Enter send  ·  shift+tab permissions  ·  /home
