zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__config_general_tab.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
assertion_line: 1723
expression: "render(&app, 100, 21)"
---
                                                                                                    
    ▄  ▄     Zeta Code v0.1.0                                                                       
  ▗█▛██▜█▖   Automatic model · Access unknown                                                       
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
─ 配 置  ─────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   通 用     提 供 商     语 言 服 务 器     Issues                                                           
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ 搜 索 配 置                                                                                      │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> Vim 模 式                在  ChatInput 中 使 用  Vim 编 辑                                    [   ]       
  内 存 诊 断                持 续 收 集 有 界 的 内 存 诊 断 数 据                                      [   ]       
  自 动 更 新                选 择 版 本 更 新 节 奏                                                最 新         
  以 差 异 显 示  Git 更 改     显 示 新 增 和 删 除 的 行 ， 而 不 是 已 更 改 的 文 件                          [   ]       
  语 言                    切 换 界 面 语 言                                                    中 文         
  状 态 栏 风 格              文 字 与 数 值 ， 清 爽 易 读                                            简 洁         
  屏 幕 模 式                使 用 全 屏 界 面 或 保 留 终 端 历 史                                      fullscreen  
                                                                                                    
  Enter/Space to change  ·  Tab/Shift+Tab to switch  ·  / to search  ·  Esc to close
