zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__help_modal.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  Home  .                                                                       
                                                                                
● Conver┌── Help ──────────────────────────────────────────────────[×]─┐        
        │                                                              │        
        │   Commands    Keys                                           │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ Search commands and shortcuts                           │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │> /status  ·  show status                                     │        
        │  /model  ·  show model                                       │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ╭─────│                                                              │───────╮
> │draft│  Tab/Shift+Tab to switch  ·  / to search  ·  Esc to close    │       │
  ╰─────└──────────────────────────────────────────────────────────────┘model ─╯
