zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__input_history_search.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
                                                                                                    
    ▄  ▄     Zeta Code v0.1.0                                                                       
  ▗█▛██▜█▖   Automatic model · Access unknown                                                       
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
──History search: find · ↑/↓ browse · Enter edit · Esc cancel───────────────────────────────────────
> find the input history owner                                                                      
────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ⏸ ask permissions on
