zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__input_history_search_cancelled.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  Home  .                                                                                           
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
> │                                                                                                │
  ╰────────────────────────────────────────────────────────────────────────────── Automatic model ─╯
                                                                                                    
  ⏸ ask permissions on                                                                              
  Enter send  ·  shift+tab permissions  ·  /home
