zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__modal_wrapped_tabs.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: text
---
"                    "
"┌── Panel ─────[×]─┐"
"│                  │"
"│   First tab      │"
"│   Second tab     │"
"│                  │"
"│> First item      │"
"│                  │"
"│                  │"
"│  Esc to close    │"
"└──────────────────┘"
"                    "
