zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__tests__model_favorites_pinned.snap
---
source: zeta-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  Home  .                                                                                           
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[×]─┐             
            │                                                                         │             
            │   Favorites    My gateway                                               │             
            │                                                                         │             
            │> gateway-model                                                          │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│                                                                         │────────────╮
> │         │                                                                         │            │
  ╰─────────│  Enter to apply · Tab/Shift+Tab to switch · Esc to close                │atic model ─╯
            └─────────────────────────────────────────────────────────────────────────┘
